success reservation completed

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=CRRent
 APP_ENV=local
 APP_KEY=base64:V55TWDa1IWY2eqJVBg8VjHqm9Iaw9d4fN82/9ptbR94=
 APP_DEBUG=true
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=b90dd7ffd7b894
+MAIL_PASSWORD=aa744d2c56f825
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=info@cr-rent.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
