--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.3|^8.0",
         "cerbero/query-filters": "^1.8",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "^7.5",
+        "laravel-validation-rules/credit-card": "^1.7",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
