--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.5",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.3",
+        "spatie/laravel-translatable": "^4.6",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
