--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "jwt-decode": "^3.1.2",
         "query-string": "^7.1.1",
         "react": "^18.2.0",
+        "react-color": "^2.19.3",
         "react-dom": "^18.2.0",
         "react-multi-carousel": "^2.8.2",
         "react-redux": "^8.0.4",
